# evidence

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
examples/: example_compression.py  example_intervals.py  example_math.py  example_numeric.py  example_runs.py  example_search.py  example_sets.py  example_sort.py  example_stack.py  example_strings.py
paper/: Makefile  main.tex  references.bib
paper/sections/: abstract.tex  conclusion.tex  design.tex  evaluation.tex  example.tex  implementation.tex  introduction.tex  related.tex
src/evidence/: __init__.py  __main__.py  _bundle.py  _cli.py  _coverage.py  _decorators.py  _engine.py  _infer.py  _mutate.py  _numeric.py  _purity.py  _strategies.py  _suggest.py  _symbolic.py  _term.py  _util.py
tests/: conftest.py  test_cli.py  test_coverage.py  test_decorators.py  test_engine.py  test_infer.py  test_mutate.py  test_numeric.py  test_purity.py  test_suggest.py  test_symbolic.py
